--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-search-input": "^0.11.3",
+    "react-super-responsive-table": "^5.2.0",
     "recharts": "^1.8.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0"
